# zephyr-nuvoton

./: CMakeLists.txt  Kconfig  Kconfig.nuvoton  README.md  west.yml
boards/arm/custom_plank/: Kconfig  Kconfig.board  Kconfig.defconfig  README.md  board.cmake  custom_plank.dts  custom_plank.yaml  custom_plank_defconfig
boards/arm/delfast_pc_001/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.c  board.cmake  delfast_pc_001.dts  delfast_pc_001.yaml  delfast_pc_001_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.m48x  Kconfig.spim_m48x  flash_m48x.c  flash_spim_m48x.c  soc_flash_m48x.c
drivers/gpio/: CMakeLists.txt  gpio_m48x.c  gpio_m48x.h
drivers/pinmux/: CMakeLists.txt  Kconfig  pinmux_m48x.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/examplesensor/: CMakeLists.txt  Kconfig
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.delfast  Kconfig.m48x  uart_m48x.c  uart_numicro.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.m48x
drivers/watchdog/: CMakeLists.txt  Kconfig  Kconfig.m48x  wdt_m48x.c
dts/arm/nuvoton/: delfast-m48x.dtsi  m2354.dtsi  m2354sjfae.dtsi  m487kidae.dtsi  m48x.dtsi  m48x_crypt.dtsi
dts/bindings/crypto/: nuvoton,m48x-aes.yaml  nuvoton,m48x-crypto-common.yaml
dts/bindings/flash_controller/: nuvoton,m48x-spi.yaml
dts/bindings/gpio/: nuvoton,m48x-gpio.yaml
dts/bindings/serial/: delfast,numicro-uart.yaml  nuvoton,m48x-uart.yaml
nuvoton/: CMakeLists.txt
nuvoton/stdlib/: CMakeLists.txt  Kconfig
zephyr/: module.yml
zephyr/drivers/: CMakeLists.txt
(+19 files in other folders)
